# wallet-tracker

./: .gitignore  Anchor.toml  deploy.sh  package-lock.json
app/: draw.ts
programs/wallet-tracker/: Cargo.toml
programs/wallet-tracker/src/: lib.rs
programs/wallet-tracker/src/instructions/: claim_win_proof.rs  close.rs  initialize.rs  mod.rs
programs/wallet-tracker/src/state/: mod.rs
tests/: wallet-tracker.ts
